Configure build to show warnings without failing and fix critical issues
- Configure Gradle to show javac and ErrorProne warnings without failing build
- Fix deprecated finalize() method in WaveformBuffer
- Add missing @Override annotations across codebase
- Fix charset issues using StandardCharsets.UTF_8
- Modernize instanceof to pattern matching
- Convert ArrayList to List interface types
- Fix empty catch blocks and Javadoc issues
- Suppress static assignment warnings in singleton constructors
- Apply Spotless code formatting