@@ -230,14 +230,14 @@ public class FileDrop {
         if (supportsDnD()) { // Make a drop listener
             dropListener =
                     new java.awt.dnd.DropTargetListener() {
+                        @Override
                         public void dragEnter(java.awt.dnd.DropTargetDragEvent evt) {
                             log(out, "FileDrop: dragEnter event.");
 
                             // Is this an acceptable drag event?
                             if (isDragOk(out, evt)) {
                                 // If it's a Swing component, set its border
-                                if (c instanceof javax.swing.JComponent) {
-                                    javax.swing.JComponent jc = (javax.swing.JComponent) c;
+                                if (c instanceof javax.swing.JComponent jc) {
                                     normalBorder = jc.getBorder();
                                     log(out, "FileDrop: normal border saved.");
                                     jc.setBorder(dragBorder);
@@ -255,12 +255,14 @@ public class FileDrop {
                             } // end else: drag not ok
                         } // end dragEnter
 
+                        @Override
                         public void dragOver(
                                 java.awt.dnd.DropTargetDragEvent
                                         evt) { // This is called continually as long as the mouse is
                             // over the drag target.
                         } // end dragOver
 
+                        @Override
                         public void drop(java.awt.dnd.DropTargetDropEvent evt) {
                             log(out, "FileDrop: drop event.");
                             try { // Get whatever was dropped
@@ -347,24 +349,24 @@ public class FileDrop {
                             } // end catch: UnsupportedFlavorException
                             finally {
                                 // If it's a Swing component, reset its border
-                                if (c instanceof javax.swing.JComponent) {
-                                    javax.swing.JComponent jc = (javax.swing.JComponent) c;
+                                if (c instanceof javax.swing.JComponent jc) {
                                     jc.setBorder(normalBorder);
                                     log(out, "FileDrop: normal border restored.");
                                 } // end if: JComponent
                             } // end finally
                         } // end drop
 
+                        @Override
                         public void dragExit(java.awt.dnd.DropTargetEvent evt) {
                             log(out, "FileDrop: dragExit event.");
                             // If it's a Swing component, reset its border
-                            if (c instanceof javax.swing.JComponent) {
-                                javax.swing.JComponent jc = (javax.swing.JComponent) c;
+                            if (c instanceof javax.swing.JComponent jc) {
                                 jc.setBorder(normalBorder);
                                 log(out, "FileDrop: normal border restored.");
                             } // end if: JComponent
                         } // end dragExit
 
+                        @Override
                         public void dropActionChanged(java.awt.dnd.DropTargetDragEvent evt) {
                             log(out, "FileDrop: dropActionChanged event.");
                             // Is this an acceptable drag event?
@@ -398,7 +400,7 @@ public class FileDrop {
             catch (Exception e) {
                 support = false;
             } // end catch
-            supportsDnD = new Boolean(support);
+            supportsDnD = Boolean.valueOf(support);
         } // end if: first time through
         return supportsDnD.booleanValue();
     } // end supportsDnD
@@ -449,6 +451,7 @@ public class FileDrop {
         // Listen for hierarchy changes and remove the drop target when the parent gets cleared out.
         c.addHierarchyListener(
                 new java.awt.event.HierarchyListener() {
+                    @Override
                     public void hierarchyChanged(java.awt.event.HierarchyEvent evt) {
                         log(out, "FileDrop: Hierarchy changed.");
                         java.awt.Component parent = c.getParent();
@@ -464,9 +467,8 @@ public class FileDrop {
                 }); // end hierarchy listener
         if (c.getParent() != null) new java.awt.dnd.DropTarget(c, dropListener);
 
-        if (recursive && (c instanceof java.awt.Container)) {
+        if (recursive && (c instanceof java.awt.Container cont)) {
             // Get the container
-            java.awt.Container cont = (java.awt.Container) c;
 
             // Get it's components
             java.awt.Component[] comps = cont.getComponents();
@@ -541,8 +543,8 @@ public class FileDrop {
         if (supportsDnD()) {
             log(out, "FileDrop: Removing drag-and-drop hooks.");
             c.setDropTarget(null);
-            if (recursive && (c instanceof java.awt.Container)) {
-                java.awt.Component[] comps = ((java.awt.Container) c).getComponents();
+            if (recursive && (c instanceof java.awt.Container cont)) {
+                java.awt.Component[] comps = cont.getComponents();
                 for (int i = 0; i < comps.length; i++) remove(out, comps[i], recursive);
                 return true;
             } // end if: recursive
@@ -592,6 +594,7 @@ public class FileDrop {
      */
     public static class Event extends java.util.EventObject {
 
+        private static final long serialVersionUID = 1L;
         private java.io.File[] files;
 
         /**
@@ -747,6 +750,7 @@ public class FileDrop {
          * @return An array of supported data flavors
          * @since 1.1
          */
+        @Override
         public java.awt.datatransfer.DataFlavor[] getTransferDataFlavors() {
             if (customFlavor != null)
                 return new java.awt.datatransfer.DataFlavor[] {
@@ -768,6 +772,7 @@ public class FileDrop {
          * @return The dropped data
          * @since 1.1
          */
+        @Override
         public Object getTransferData(java.awt.datatransfer.DataFlavor flavor)
                 throws java.awt.datatransfer.UnsupportedFlavorException, java.io.IOException {
             // Native object
@@ -789,6 +794,7 @@ public class FileDrop {
          * @return Whether or not the flavor is supported
          * @since 1.1
          */
+        @Override
         public boolean isDataFlavorSupported(java.awt.datatransfer.DataFlavor flavor) {
             // Native object
             if (flavor.equals(DATA_FLAVOR)) return true;
